patches/arm/unsubmitted-ldconfig-cache-abi.diff: Rewritten slightly.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5440

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     - patches/arm/cvs-ldconfig-cache-abi.diff: Dropped, merged upstream.
     - patches/arm/local-atomic.diff: Dropped, fixed differently upstream.
     - patches/arm/unsubmitted-armhf-linker.diff: Dropped, not needed.
+    - patches/arm/unsubmitted-ldconfig-cache-abi.diff: Rewritten slightly.
     - patches/hppa/submitted-nptl-carlos.diff: Rebased against upstream.
     - patches/hppa/local-stack-grows-up.diff: Rebased against upstream.
     - patches/hurd-i386/local-enable-ldconfig.diff: dl-cache.c dropped.
