debian/debhelper.in/libc.preinst: Fix preinst kernel check to match the reality that we need >= 2.6.32, as found in squeeze/lucid/RHEL6.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5441

--- a/debian/changelog
+++ b/debian/changelog
@@ -57,6 +57,8 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     as this has been fixed in the 3.7 release and 3.8 kernel headers.
   * debian/sysdeps/{amd64,i386}.mk: Fix rtlddir for x32 alternate builds.
   * debian/sysdeps/{armel,armhf}.mk: Merge multilib configs from Ubuntu.
+  * debian/debhelper.in/libc.preinst: Fix preinst kernel check to match
+    the reality that we need >= 2.6.32, as found in squeeze/lucid/RHEL6.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
