--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.17-0experimental0) UNRELEASED; urgency=low
 
   * New upstream release: version 2.17, orig tarball built at SVN r22169:
+    - Restricts ld.so self-loading checks to normal mode (LP: #1088677)
     - debian/rules.d/tarball.mk: ports is no longer external to libc.
     - debian/*: Update all 2.16 occurences to 2.17 for upgrades/deps.
     - patches/localedata/supported.diff: Rebased against new upstream.
@@ -59,6 +60,7 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/sysdeps/{armel,armhf}.mk: Merge multilib configs from Ubuntu.
   * debian/debhelper.in/libc.preinst: Fix preinst kernel check to match
     the reality that we need >= 2.6.32, as found in squeeze/lucid/RHEL6.
+  * debian/rules: Fix EGLIBC_VERSION epoch parsing breakage (LP: #929565)
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
