debian/patches/any/unsubmitted-tst-array-as-needed.diff: Fix tst-array2 and tst-array5 to build with --no-as-needed to prevent test regression.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5443

--- a/debian/changelog
+++ b/debian/changelog
@@ -61,6 +61,8 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/debhelper.in/libc.preinst: Fix preinst kernel check to match
     the reality that we need >= 2.6.32, as found in squeeze/lucid/RHEL6.
   * debian/rules: Fix EGLIBC_VERSION epoch parsing breakage (LP: #929565)
+  * debian/patches/any/unsubmitted-tst-array-as-needed.diff: Fix tst-array2
+    and tst-array5 to build with --no-as-needed to prevent test regression.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
