debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off libc-prof arbitrarily, and disable it for arm64, which lacks support.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5446

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 eglibc (2.17-0experimental0) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * New upstream release: version 2.17, orig tarball built at SVN r22169:
     - Restricts ld.so self-loading checks to normal mode (LP: #1088677)
     - debian/rules.d/tarball.mk: ports is no longer external to libc.
@@ -63,6 +64,10 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/rules: Fix EGLIBC_VERSION epoch parsing breakage (LP: #929565)
   * debian/patches/any/unsubmitted-tst-array-as-needed.diff: Fix tst-array2
     and tst-array5 to build with --no-as-needed to prevent test regression.
+
+  [ Matthias Klose ]
+  * debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off
+    libc-prof arbitrarily, and disable it for arm64, which lacks support.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
