debian/rules.d/build.mk: Fix armhf multilib with WITH_BUILD_SYSROOT.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5447

--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,7 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   [ Matthias Klose ]
   * debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off
     libc-prof arbitrarily, and disable it for arm64, which lacks support.
+  * debian/rules.d/build.mk: Fix armhf multilib with WITH_BUILD_SYSROOT.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
