--- a/debian/changelog
+++ b/debian/changelog
@@ -62,8 +62,8 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/debhelper.in/libc.preinst: Fix preinst kernel check to match
     the reality that we need >= 2.6.32, as found in squeeze/lucid/RHEL6.
   * debian/rules: Fix EGLIBC_VERSION epoch parsing breakage (LP: #929565)
-  * debian/patches/any/unsubmitted-tst-array-as-needed.diff: Fix tst-array2
-    and tst-array5 to build with --no-as-needed to prevent test regression.
+  * debian/patches/any/cvs-tst-array-as-needed.diff: Fix tst-array2 and
+    tst-array5 to build with --no-as-needed to prevent test regressions.
 
   [ Matthias Klose ]
   * debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off
