--- a/debian/changelog
+++ b/debian/changelog
@@ -70,6 +70,10 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     libc-prof arbitrarily, and disable it for arm64, which lacks support.
   * debian/rules.d/build.mk: Fix armhf multilib with WITH_BUILD_SYSROOT.
 
+  [ Steve McIntyre ]
+  * debian/patches/arm/unsubmitted-ldso-multilib.diff: Stop ld.so from
+    exiting prematurely when it encounters wrong-float ABI libraries.
+
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
 eglibc (2.16-0experimental1) experimental; urgency=low
