* debian/patches/any/unsubmitted-ldso-machine-mismatch.diff: Skip past   libraries that are built for other machines, rather than erroring. * debian/patches/i386/unsubmitted-quiet-ldconfig.diff: Fix ldconfig on   x86 to stop complaining so loudly about wrong-arch libraries on path.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5452

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,10 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/rules: Fix EGLIBC_VERSION epoch parsing breakage (LP: #929565)
   * debian/patches/any/cvs-tst-array-as-needed.diff: Fix tst-array2 and
     tst-array5 to build with --no-as-needed to prevent test regressions.
+  * debian/patches/any/unsubmitted-ldso-machine-mismatch.diff: Skip past
+    libraries that are built for other machines, rather than erroring.
+  * debian/patches/i386/unsubmitted-quiet-ldconfig.diff: Fix ldconfig on
+    x86 to stop complaining so loudly about wrong-arch libraries on path.
 
   [ Matthias Klose ]
   * debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off
