From Pino Toscano: Rebase patches/hurd-i386/unsubmitted-mremap.diff against new upstream, reinstall patches/hurd-i386/local-madvise_warn.diff
svn path=/glibc-package/branches/eglibc-2.17/; revision=5454

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,7 +25,6 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     - patches/hurd-i386/tg-elfosabi_gnu.diff: Drop powerpc support.
     - patches/hurd-i386/tg-grantpt.diff: Rebased against new upstream.
     - patches/hurd-i386/unsubmitted-pthread_posix-option.diff: Rebased.
-    - patches/hurd-i386/local-madvise_warn.diff: Dropped, fixed upstream.
     - patches/hurd-i386/submitted-getgroups.diff: Dropped, merged upstream.
     - patches/hurd-i386/submitted-getlogin_r.diff: Dropped, fixed upstream.
     - patches/hurd-i386/submitted-ptsname.diff: Dropped, merged upstream.
@@ -77,6 +76,10 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   [ Steve McIntyre ]
   * debian/patches/arm/unsubmitted-ldso-multilib.diff: Stop ld.so from
     exiting prematurely when it encounters wrong-float ABI libraries.
+
+  [ Pino Toscano ]
+  * debian/patches/hurd-i386/unsubmitted-mremap.diff: Rebased against new
+    upstream.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
