Anal-retentive changelog formatting changes
svn path=/glibc-package/branches/eglibc-2.17/; revision=5461

--- a/debian/changelog
+++ b/debian/changelog
@@ -80,19 +80,16 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     exiting prematurely when it encounters wrong-float ABI libraries.
 
   [ Pino Toscano ]
-  * debian/patches/hurd-i386/tg-ptrmangle.diff: Remove, obsolete.
-  * debian/patches/hurd-i386/tg-check_native.diff: Remove, obsolete.
-  * debian/patches/hurd-i386/submitted-regex_internal.diff: Remove, fixed
-    upstream.
-  * debian/patches/hurd-i386/local-disable-sendmmsg.diff: Drop, fixed
-    upstream.
-  * debian/patches/hurd-i386/unsubmitted-pthread.diff: Drop, obsolete.
+  * Rebase/remove hurd-i386 patches against the new upstream version:
+    - patches/hurd-i386/tg-ptrmangle.diff: Remove, obsolete.
+    - patches/hurd-i386/tg-check_native.diff: Remove, obsolete.
+    - patches/hurd-i386/submitted-regex_internal.diff: Fixed upstream.
+    - patches/hurd-i386/local-disable-sendmmsg.diff: Fixed upstream.
+    - patches/hurd-i386/unsubmitted-pthread.diff: Drop, obsolete.
+    - patches/hurd-i386/unsubmitted-mremap.diff: Rebased for new upstream.
+  * debian/patches/hurd-i386/local-disable-tst-xmmymm.diff: Disable test.
   * Update expected-results-i486-gnu-libc, expected-results-i686-gnu-i386,
     expected-results-i686-gnu-i686, expected-results-i686-gnu-xen.
-  * debian/patches/hurd-i386/local-disable-tst-xmmymm.diff: Disable test on
-    hurd-i386 for now.
-  * debian/patches/hurd-i386/unsubmitted-mremap.diff: Rebased against new
-    upstream.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
 
