* debian/patches/any/cvs-use-glibc-wchar.diff: Switch from the eglibc   implementation of wchar.h to the cleaner glibc-2.18 implementation. * debian/patches/arm/local-eabi-wchar.diff: Dropped, no longer needed. * debian/patches/svn-updates.diff: Bring svn-updates to revision 22169.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5462

--- a/debian/changelog
+++ b/debian/changelog
@@ -69,6 +69,10 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
     x86 to stop complaining so loudly about wrong-arch libraries on path.
   * debian/{rules.d/build.mk,sysdeps/hurd*}: When the threads variable is
     not set to "yes", add --disable-nscd to the main configure options.
+  * debian/patches/any/cvs-use-glibc-wchar.diff: Switch from the eglibc
+    implementation of wchar.h to the cleaner glibc-2.18 implementation.
+  * debian/patches/arm/local-eabi-wchar.diff: Dropped, no longer needed.
+  * debian/patches/svn-updates.diff: Bring svn-updates to revision 22169.
 
   [ Matthias Klose ]
   * debian/{rules,rules.d/control.mk,control.in/libc}: Allow turning off
