debian/patches/any/local-tst-dir-overlayfs.diff: Apply dirty hack to skip tst-dir on overlayfs, as it currently fails (see: LP #1107492)
svn path=/glibc-package/branches/eglibc-2.17/; revision=5463

--- a/debian/changelog
+++ b/debian/changelog
@@ -72,6 +72,8 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * debian/patches/any/cvs-use-glibc-wchar.diff: Switch from the eglibc
     implementation of wchar.h to the cleaner glibc-2.18 implementation.
   * debian/patches/arm/local-eabi-wchar.diff: Dropped, no longer needed.
+  * debian/patches/any/local-tst-dir-overlayfs.diff: Apply dirty hack to
+    skip tst-dir on overlayfs, as it currently fails (see: LP #1107492)
   * debian/patches/svn-updates.diff: Bring svn-updates to revision 22169.
 
   [ Matthias Klose ]
