--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-0experimental0) UNRELEASED; urgency=low
+eglibc (2.17-0experimental0) experimental; urgency=low
 
   [ Adam Conrad ]
   * New upstream release: version 2.17, orig tarball built at SVN r22169:
@@ -97,7 +97,7 @@ eglibc (2.17-0experimental0) UNRELEASED; urgency=low
   * Update expected-results-i486-gnu-libc, expected-results-i686-gnu-i386,
     expected-results-i686-gnu-i686, expected-results-i686-gnu-xen.
 
- -- Adam Conrad <adconrad@0c3.net>  Mon, 26 Nov 2012 02:20:40 -0700
+ -- Adam Conrad <adconrad@0c3.net>  Sun, 27 Jan 2013 23:33:32 -0700
 
 eglibc (2.16-0experimental1) experimental; urgency=low
 
