--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-0experimental1) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Mon, 28 Jan 2013 02:05:01 -0700
+
 eglibc (2.17-0experimental0) experimental; urgency=low
 
   [ Adam Conrad ]
