--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 eglibc (2.17-0experimental1) UNRELEASED; urgency=low
 
-  * 
+  * Rebase kfreebsd patches missed in the previous upload due to quilt:
+    - debian/patches/kfreebsd/local-undef-glibc.diff: Unfuzz.
+    - debian/patches/kfreebsd/local-use-thr-primitives.diff: Unfuzz.
+    - debian/patches/kfreebsd/local-linuxthreads29.diff: Unfuzz.
+    - debian/patches/kfreebsd/local-readdir_r.diff: Track file rename.
+    - debian/patches/kfreebsd/local-memusage_no_mremap.diff: Unfuzz.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 28 Jan 2013 02:05:01 -0700
 
