debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Following the upstream removal of TLS configure options, enable unconditionally.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5468

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
     - debian/patches/kfreebsd/local-linuxthreads29.diff: Unfuzz.
     - debian/patches/kfreebsd/local-readdir_r.diff: Track file rename.
     - debian/patches/kfreebsd/local-memusage_no_mremap.diff: Unfuzz.
+  * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Following the
+    upstream removal of TLS configure options, enable unconditionally.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 28 Jan 2013 02:05:01 -0700
