debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5469

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 eglibc (2.17-0experimental1) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * Rebase kfreebsd patches missed in the previous upload due to quilt:
     - debian/patches/kfreebsd/local-undef-glibc.diff: Unfuzz.
     - debian/patches/kfreebsd/local-use-thr-primitives.diff: Unfuzz.
@@ -9,6 +10,9 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
   * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Following the
     upstream removal of TLS configure options, enable unconditionally.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
+
+  [ Pino Toscano ]
+  * debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
 
  -- Adam Conrad <adconrad@0c3.net>  Mon, 28 Jan 2013 02:05:01 -0700
 
