--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
   * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Following the
     upstream removal of TLS configure options, enable unconditionally.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
+  * debian/rules: Don't put x32 debug symbols in libc-dbg (LP: #1106471)
 
   [ Pino Toscano ]
   * debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
