debian/patches/any/local-tst-dir-overlayfs.diff: Dropped, as I seem to be the only person building on overlayfs, and I'll just use aufs.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5471

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
     - debian/patches/kfreebsd/local-memusage_no_mremap.diff: Unfuzz.
   * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Following the
     upstream removal of TLS configure options, enable unconditionally.
+  * debian/patches/any/local-tst-dir-overlayfs.diff: Dropped, as I seem
+    to be the only person building on overlayfs, and I'll just use aufs.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
   * debian/rules: Don't put x32 debug symbols in libc-dbg (LP: #1106471)
 
