* debian/testsuite-checking/expected-*: Allow all arches to fail the   tst-cputimer1 test, as it harmlessly comes and goes on all of them. * debian/testsuite-checking/expected-*: Adjust ia64 and armel results   to allow failures expected by the upstream port maintainers of each.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5472

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,10 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
     to be the only person building on overlayfs, and I'll just use aufs.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
   * debian/rules: Don't put x32 debug symbols in libc-dbg (LP: #1106471)
+  * debian/testsuite-checking/expected-*: Allow all arches to fail the
+    tst-cputimer1 test, as it harmlessly comes and goes on all of them.
+  * debian/testsuite-checking/expected-*: Adjust ia64 and armel results
+    to allow failures expected by the upstream port maintainers of each.
 
   [ Pino Toscano ]
   * debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
