* debian/{control,control.in/main}: Bump Standards-Version to 3.9.4. * Amend eglibc-source.lintian-overrides to add libc-dev-alt.postinst.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5473

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
     tst-cputimer1 test, as it harmlessly comes and goes on all of them.
   * debian/testsuite-checking/expected-*: Adjust ia64 and armel results
     to allow failures expected by the upstream port maintainers of each.
+  * debian/{control,control.in/main}: Bump Standards-Version to 3.9.4.
+  * Amend eglibc-source.lintian-overrides to add libc-dev-alt.postinst.
 
   [ Pino Toscano ]
   * debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
