debian/patches/any/unsubmitted-cloexec-conditional.diff: Make more occurences of O_CLOEXEC conditional on it actually being defined.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5475

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
   * debian/patches/any/local-tst-dir-overlayfs.diff: Dropped, as I seem
     to be the only person building on overlayfs, and I'll just use aufs.
   * Update debian/patches/kfreebsd/local-sysdeps.diff to revision 4353.
+  * debian/patches/any/unsubmitted-cloexec-conditional.diff: Make more
+    occurences of O_CLOEXEC conditional on it actually being defined.
   * debian/rules: Don't put x32 debug symbols in libc-dbg (LP: #1106471)
   * debian/testsuite-checking/expected-*: Allow all arches to fail the
     tst-cputimer1 test, as it harmlessly comes and goes on all of them.
