--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-0experimental1) UNRELEASED; urgency=low
+eglibc (2.17-0experimental1) experimental; urgency=low
 
   [ Adam Conrad ]
   * Rebase kfreebsd patches missed in the previous upload due to quilt:
@@ -27,7 +27,7 @@ eglibc (2.17-0experimental1) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * debian/rules.d/build.mk: When threads is no, disable nscd in all passes.
 
- -- Adam Conrad <adconrad@0c3.net>  Mon, 28 Jan 2013 02:05:01 -0700
+ -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 20:34:44 -0700
 
 eglibc (2.17-0experimental0) experimental; urgency=low
 
