--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-0experimental2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 22:29:39 -0700
+
 eglibc (2.17-0experimental1) experimental; urgency=low
 
   [ Adam Conrad ]
