debian/testsuite-checking/expected-mips*: Allow tst-audit8 to fail.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5480

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 eglibc (2.17-0experimental2) UNRELEASED; urgency=low
 
-  * 
+  * debian/testsuite-checking/expected-mips*: Allow tst-audit8 to fail.
 
  -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 22:29:39 -0700
 
