--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 eglibc (2.17-0experimental2) UNRELEASED; urgency=low
 
+  * Switch to gcc-4.7 across the board to tidy up some C99 conformance,
+    and force it to an experimental version at the request of Matthias.
   * debian/testsuite-checking/expected-mips*: Allow tst-audit8 to fail.
 
  -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 22:29:39 -0700
