debian/sysdeps/arm64.mk: Remove --enable-multi-arch (LP: #1117602)
svn path=/glibc-package/branches/eglibc-2.17/; revision=5483

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ eglibc (2.17-0experimental2) UNRELEASED; urgency=low
 
   * Switch to gcc-4.7 across the board to tidy up some C99 conformance,
     and force it to an experimental version at the request of Matthias.
+  * debian/sysdeps/arm64.mk: Remove --enable-multi-arch (LP: #1117602)
   * debian/testsuite-checking/expected-mips*: Allow tst-audit8 to fail.
 
  -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 22:29:39 -0700
