--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-0experimental2) UNRELEASED; urgency=low
+eglibc (2.17-0experimental2) experimental; urgency=low
 
   * Switch to gcc-4.7 across the board to tidy up some C99 conformance,
     and force it to an experimental version at the request of Matthias.
@@ -7,7 +7,7 @@ eglibc (2.17-0experimental2) UNRELEASED; urgency=low
     and don't restart init when upgrading in chroots (Closes: #608903)
   * debian/testsuite-checking/expected-mips*: Allow tst-audit8 to fail.
 
- -- Adam Conrad <adconrad@0c3.net>  Sun, 03 Feb 2013 22:29:39 -0700
+ -- Adam Conrad <adconrad@0c3.net>  Wed, 06 Feb 2013 22:41:23 -0700
 
 eglibc (2.17-0experimental1) experimental; urgency=low
 
