--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-0experimental3) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
+
 eglibc (2.17-0experimental2) experimental; urgency=low
 
   * Switch to gcc-4.7 across the board to tidy up some C99 conformance,
