--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
 eglibc (2.17-0experimental3) UNRELEASED; urgency=low
 
-  * 
+  [ Samuel Thibault ]
+  * rename patches/hurd-i386/unsubmitted-single-hurdselect-timeout.diff into
+    patches/hurd-i386/tg-single-select-timeout.diff,
+    patches/hurd-i386/unsubmitted-select-EINTR.diff into
+    patches/hurd-i386/tg-select-EINTR.diff,
+    patches/hurd-i386/unsubmitted-setitimer_fix.diff into
+    patches/hurd-i386/tg-setitimer.diff.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
