--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     patches/hurd-i386/unsubmitted-setitimer_fix.diff into
     patches/hurd-i386/tg-setitimer.diff.
 
+  [ Adam Conrad ]
+  * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'td -d'
+    to avoid spewing warning when the awk alternative points to gawk
+
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
 eglibc (2.17-0experimental2) experimental; urgency=low
