Fix typos in changelog
svn path=/glibc-package/branches/eglibc-2.17/; revision=5492

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     patches/hurd-i386/tg-setitimer.diff.
 
   [ Adam Conrad ]
-  * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'td -d'
-    to avoid spewing warning when the awk alternative points to gawk
+  * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
+    to avoid spewing warnings when the awk alternative points to gawk
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
