--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     patches/hurd-i386/tg-select-EINTR.diff,
     patches/hurd-i386/unsubmitted-setitimer_fix.diff into
     patches/hurd-i386/tg-setitimer.diff.
+  * patches/hurd-i386/tg-ifaddrs_v6.diff: New patch, fixes IPv6 addresses in
+    getifaddrs.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
