forward-port 5489 and 5490 from trunk
svn path=/glibc-package/branches/eglibc-2.17/; revision=5495

--- a/debian/changelog
+++ b/debian/changelog
@@ -611,6 +611,8 @@ eglibc (2.13-39) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-select-EINTR.diff: Fix select vs signals.
   * patches/hurd-i386/cvs-libpthread_lock.diff: Fix file lock primitives
     version to fix stdio thread-safety.
+  * patches/hurd-i386/tg-pie-sbrk.diff: Fix sbrk() use in PIE binaries (e.g.
+    libgc, perl).
 
   [ Adam Conrad ]
   * debian/testsuite-checking/compare.sh: Disable failing the build on test
