patches/hurd-i386/unsubmitted-subhurd.diff: New patch, fixes sub-hurd boot.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5496

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     patches/hurd-i386/tg-setitimer.diff.
   * patches/hurd-i386/tg-ifaddrs_v6.diff: New patch, fixes IPv6 addresses in
     getifaddrs.
+  * patches/hurd-i386/unsubmitted-subhurd.diff: New patch, fixes sub-hurd
+    boot.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
