Forward 5497 from trunk.
* patches/hurd-i386/libpthread_cancellation.diff: New patch, fixes
  cancellations.
* patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: New patch, introduces
  pthread_hurd_cond_timedwait_np needed to fix select with zero timeout in
  Hurd servers.

svn path=/glibc-package/branches/eglibc-2.17/; revision=5498

--- a/debian/changelog
+++ b/debian/changelog
@@ -615,6 +615,11 @@ eglibc (2.13-39) UNRELEASED; urgency=low
     version to fix stdio thread-safety.
   * patches/hurd-i386/tg-pie-sbrk.diff: Fix sbrk() use in PIE binaries (e.g.
     libgc, perl).
+  * patches/hurd-i386/libpthread_cancellation.diff: New patch, fixes
+    cancellations.
+  * patches/hurd-i386/libpthread_hurd_cond_timedwait.diff: New patch, introduces
+    pthread_hurd_cond_timedwait_np needed to fix select with zero timeout in
+    Hurd servers.
 
   [ Adam Conrad ]
   * debian/testsuite-checking/compare.sh: Disable failing the build on test
