patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5499

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     getifaddrs.
   * patches/hurd-i386/unsubmitted-subhurd.diff: New patch, fixes sub-hurd
     boot.
+  * patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
