--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
   * patches/hurd-i386/unsubmitted-subhurd.diff: New patch, fixes sub-hurd
     boot.
   * patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
+  * patches/hurd-i386/tg-af_local_strlen.diff: New patch, fixes using PF_LOCAL
+    paths without ending \0.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
