patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5506

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
   * patches/hurd-i386/tg-af_local_strlen.diff: New patch, fixes using PF_LOCAL
     paths without ending \0.
+  * patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
