--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-af_local_strlen.diff: New patch, fixes using PF_LOCAL
     paths without ending \0.
   * patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
+  * patches/hurd-i386/tg-tls.diff: Update to tg version.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
