--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     paths without ending \0.
   * patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
   * patches/hurd-i386/tg-tls.diff: Update to tg version.
+  * patches/hurd-i386/tg-exec-static.diff: New patch, fixes boot with
+    statically-linked exec.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
