* patches/hurd-i386/tg-EIEIO-fr.diff: New patch, fixes french translation of     EIEIO.
svn path=/glibc-package/branches/eglibc-2.17/; revision=5512

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
   * patches/hurd-i386/tg-tls.diff: Update to tg version.
   * patches/hurd-i386/tg-exec-static.diff: New patch, fixes boot with
     statically-linked exec.
+  * patches/hurd-i386/tg-EIEIO-fr.diff: New patch, fixes french translation of
+    EIEIO.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
