--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d'
     to avoid spewing warnings when the awk alternative points to gawk
+  * debian/patches/any/submitted-setfsid-wur.diff: Drop __wur from the
+    setfsuid and setfsgid functions to avoid enforcing result checking.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
