--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     avoid warnings when the awk alternative points to gawk (LP: #1156923)
   * debian/patches/any/submitted-setfsid-wur.diff: Drop __wur from setfsuid 
     and setfsgid functions to avoid -Werror=unused-result (Closes: #701422)
+  * debian/patches/i386/cvs-simd-exception.diff: Pull patch from upstream
+    to fix a performance regression in i386 SIMD exceptions (LP: #1157244)
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
