--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     and setfsgid functions to avoid -Werror=unused-result (Closes: #701422)
   * debian/patches/i386/cvs-simd-exception.diff: Pull patch from upstream
     to fix a performance regression in i386 SIMD exceptions (LP: #1157244)
+  * debian/patches/svn-updates.diff: Update to r22884 of eglibc-2_17 branch
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 07 Feb 2013 00:44:54 -0700
 
