--- a/debian/changelog
+++ b/debian/changelog
@@ -1,25 +1,22 @@
 eglibc (2.17-0experimental3) UNRELEASED; urgency=low
 
   [ Samuel Thibault ]
-  * rename patches/hurd-i386/unsubmitted-single-hurdselect-timeout.diff into
-    patches/hurd-i386/tg-single-select-timeout.diff,
-    patches/hurd-i386/unsubmitted-select-EINTR.diff into
-    patches/hurd-i386/tg-select-EINTR.diff,
-    patches/hurd-i386/unsubmitted-setitimer_fix.diff into
-    patches/hurd-i386/tg-setitimer.diff.
-  * patches/hurd-i386/tg-ifaddrs_v6.diff: New patch, fixes IPv6 addresses in
-    getifaddrs.
-  * patches/hurd-i386/unsubmitted-subhurd.diff: New patch, fixes sub-hurd
-    boot.
+  * Rename several hurd-i386 patches to reflect upstream submission status:
+    - patches/hurd-i386/unsubmitted-single-hurdselect-timeout.diff into
+      patches/hurd-i386/tg-single-select-timeout.diff,
+    - patches/hurd-i386/unsubmitted-select-EINTR.diff into
+      patches/hurd-i386/tg-select-EINTR.diff,
+    - patches/hurd-i386/unsubmitted-setitimer_fix.diff into
+      patches/hurd-i386/tg-setitimer.diff.
+  * patches/hurd-i386/tg-ifaddrs_v6.diff: New, fixes IPv6 in getifaddrs.
+  * patches/hurd-i386/unsubmitted-subhurd.diff: New, fixes sub-hurd boot.
   * patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
-  * patches/hurd-i386/tg-af_local_strlen.diff: New patch, fixes using PF_LOCAL
-    paths without ending \0.
   * patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
   * patches/hurd-i386/tg-tls.diff: Update to tg version.
-  * patches/hurd-i386/tg-exec-static.diff: New patch, fixes boot with
-    statically-linked exec.
-  * patches/hurd-i386/tg-EIEIO-fr.diff: New patch, fixes french translation of
-    EIEIO.
+  * patches/hurd-i386/tg-exec-static.diff: New, fixes boot with static exec.
+  * patches/hurd-i386/tg-EIEIO-fr.diff: New, fixes french translation of EIEIO.
+  * patches/hurd-i386/tg-af_local_strlen.diff: New patch, fixes using PF_LOCAL
+    paths without ending \0.
 
   [ Adam Conrad ]
   * debian/debhelper.in/libc.postint: Switch from 'awk gsub' to 'tr -d' to
