--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-0experimental3) UNRELEASED; urgency=low
+eglibc (2.17-1) unstable; urgency=low
 
   [ Samuel Thibault ]
   * Rename several hurd-i386 patches to reflect upstream submission status:
@@ -9,7 +9,6 @@ eglibc (2.17-0experimental3) UNRELEASED; urgency=low
     - patches/hurd-i386/unsubmitted-setitimer_fix.diff into
       patches/hurd-i386/tg-setitimer.diff.
   * patches/hurd-i386/tg-ifaddrs_v6.diff: New, fixes IPv6 in getifaddrs.
-  * patches/hurd-i386/unsubmitted-subhurd.diff: New, fixes sub-hurd boot.
   * patches/hurd-i386/tg-remap_getcwd.diff: New patch, fixes remap translator.
   * patches/hurd-i386/tg-nice.diff: New patch, fixes nice level granularity.
   * patches/hurd-i386/tg-tls.diff: Update to tg version.
