--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-2) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
+
 eglibc (2.17-1) unstable; urgency=low
 
   [ Samuel Thibault ]
