--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.17-2) UNRELEASED; urgency=low
 
-  * 
+  * debian/patches/any/unsubmitted-cloexec-conditional.diff: Catch yet
+    another unconditional O_CLOEXEC and conditionalize it for freebsd.
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
