* patches/any/submitted-sys-param-h-DEV_BSIZE.diff: New patch to fix     conflict with kFreeBSD kernel headers.
svn path=/glibc-package/trunk/; revision=5554

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,12 @@
 eglibc (2.17-2) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * debian/patches/any/unsubmitted-cloexec-conditional.diff: Catch yet
     another unconditional O_CLOEXEC and conditionalize it for freebsd.
+
+  [ Aurelien Jarno ]
+  * patches/any/submitted-sys-param-h-DEV_BSIZE.diff: New patch to fix
+    conflict with kFreeBSD kernel headers.
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
