--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/any/submitted-sys-param-h-DEV_BSIZE.diff: New patch to fix
     conflict with kFreeBSD kernel headers.
+  * kfreebsd/local-sysdeps.diff: update to revision 4409 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
