--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * debian/patches/any/unsubmitted-cloexec-conditional.diff: Catch yet
     another unconditional O_CLOEXEC and conditionalize it for freebsd.
+  * debian/patches/kfreebsd/local-HAVE_TLS_SUPPORT.diff: Removed, as
+    this is no longer needed by the updated glibc-bsd sysdeps upstream.
 
   [ Aurelien Jarno ]
   * patches/any/submitted-sys-param-h-DEV_BSIZE.diff: New patch to fix
