* patches/kfreebsd/local-linuxthreads-TLS-THREAD.diff: New patch to remove     conditional defines on USE___THREAD and HAVE_TLS_SUPPORT.   * patches/kfreebsd/local-linuxthreads-mutex-initializer.diff: New patch to     define MUTEX_INITIALIZER.   * kfreebsd/local-sysdeps.diff: update to revision 4410 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=5558

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,11 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * patches/any/cvs-sys-param-h-DEV_BSIZE.diff: New patch to fix
     conflict with kFreeBSD kernel headers.
-  * kfreebsd/local-sysdeps.diff: update to revision 4409 (from glibc-bsd).
+  * patches/kfreebsd/local-linuxthreads-TLS-THREAD.diff: New patch to remove
+    conditional defines on USE___THREAD and HAVE_TLS_SUPPORT.
+  * patches/kfreebsd/local-linuxthreads-mutex-initializer.diff: New patch to
+    define MUTEX_INITIALIZER.
+  * kfreebsd/local-sysdeps.diff: update to revision 4410 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
