--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,14 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     conditional defines on USE___THREAD and HAVE_TLS_SUPPORT.
   * patches/kfreebsd/local-linuxthreads-mutex-initializer.diff: New patch to
     define MUTEX_INITIALIZER.
-  * kfreebsd/local-sysdeps.diff: update to revision 4412 (from glibc-bsd).
+  
+  [ Petr Salinger ]
+  * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
+    changes in startup code
+  * patches/kfreebsd/local-no-pldd.diff: pldd is linux only utility
+  * patches/kfreebsd/local-nscd-nosendfile-fix.diff: handle system without
+    sendfile syscall
+  * kfreebsd/local-sysdeps.diff: update to revision 4417 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
