* Japanese debconf translation update from Nobuhiro Iwamatsu.     closes: #695077.
svn path=/glibc-package/trunk/; revision=5562

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     conditional defines on USE___THREAD and HAVE_TLS_SUPPORT.
   * patches/kfreebsd/local-linuxthreads-mutex-initializer.diff: New patch to
     define MUTEX_INITIALIZER.
+  * Japanese debconf translation update from Nobuhiro Iwamatsu.
+    closes: #695077.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
