--- a/debian/po/ja.po
+++ b/debian/po/ja.po
@@ -16,10 +16,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: glibc 2.11.2-7\n"
+"Project-Id-Version: eglibc_2.13-38\n"
 "Report-Msgid-Bugs-To: eglibc@packages.debian.org\n"
 "POT-Creation-Date: 2011-10-30 11:52-0700\n"
-"PO-Revision-Date: 2010-11-21 17:14+0900\n"
+"PO-Revision-Date: 2012-12-31 23:29+0900\n"
 "Last-Translator: Nobuhiro Iwamatsu <iwamatsu@debian.org>\n"
 "Language-Team: Japanese <debian-japanese@lists.debian.org>\n"
 "Language: ja\n"
@@ -47,7 +47,7 @@ msgid ""
 "to use their language, country, characters, collation order, etc."
 msgstr ""
 "ロケールとは、複数の言語を切り替え、ユーザが自身の言語・国・文字・並べ替え順"
-"序などを使えるように許可するための仕組みです。"
+"序などを使えるようにするための仕組みです。"
 
 #. Type: multiselect
 #. Description
@@ -71,7 +71,7 @@ msgstr "なし"
 #. Description
 #: ../debhelper.in/locales.templates:2002
 msgid "Default locale for the system environment:"
-msgstr "システム標準の環境変数として設定するデフォルトロケール:"
+msgstr "システムの環境変数として設定するデフォルトロケール:"
 
 #. Type: select
 #. Description
@@ -81,7 +81,7 @@ msgid ""
 "for the user. You can choose a default locale for the system from the "
 "generated locales."
 msgstr ""
-"ユーザに正しい言語でテキストを表示するため、Debian では多くのパッケージがロ"
+"ユーザに合った言語でテキストを表示するため、Debian では多くのパッケージがロ"
 "ケールを使用します。生成したロケールの中からシステムでのデフォルトロケールを"
 "選択できます。"
 
@@ -93,9 +93,9 @@ msgid ""
 "is a multi-user system where not all users are able to speak the default "
 "language, they will experience difficulties."
 msgstr ""
-"これはシステム全体のデフォルトロケールを選ぶことになります。このシステムがマ"
-"ルチユーザシステムで、すべてのユーザがデフォルトの言語を話すことができるとい"
-"うわけではない場合は、そういった人々は困難を感じることになってしまいます。"
+"これはシステム全体のデフォルトの言語を選ぶことになります。このシステムがマルチ"
+"ユーザシステムで、すべてのユーザがデフォルトの言語を話すことができるというわけ"
+"ではない場合は、そういった人々は困難を感じることになってしまいます。"
 
 #. Type: boolean
 #. Description
@@ -130,8 +130,8 @@ msgid ""
 "This script detected the following installed services which must be stopped "
 "before the upgrade: ${services}"
 msgstr ""
-"スクリプトは、更新前に停止されなければならない以下のインストールされたサービ"
-"スを検出しました: ${services}"
+"スクリプトは、更新前に停止されなければならない以下のサービスがインストールされ"
+"ているのを検出しました: ${services}"
 
 #. Type: boolean
 #. Description
@@ -162,8 +162,8 @@ msgstr ""
 "NSS を利用している実行中のサービスおよびプログラムは、再起動する必要がありま"
 "す。さもないと、ルックアップおよび認証がもう利用できないことになります (ssh "
 "のようなサービスでは、これはログインできるかどうかに影響します)。以下のスペー"
-"スで区切られた、今再起動するサービスの init.d スクリプトのリストを見て、必要"
-"なら修正してください。"
+"スで区切られた、以下の init.d スクリプト一覧を確認して、サービスをここで再起"
+"動する必要があれば修正してください。"
 
 #. Type: string
 #. Description
@@ -217,15 +217,15 @@ msgid ""
 msgstr ""
 "このシステムで 1 つ以上の xscreensaver あるいは xlockmore の動作が検出されま"
 "した。非互換のライブラリ変更のため、GNU libc パッケージの更新はこれらのプログ"
-"ラムでの認証ができなくなるという状態にするでしょう。ユーザが現在のセッション"
-"の外に締め出されるのを避けるため、このパッケージの更新を続ける前に、これらの"
-"プログラムを再起動するか停止するように手配すべきです。"
+"ラムでの認証ができない状態になるでしょう。ユーザが現在のセッションの外に締め出"
+"されるのを避けるため、このパッケージの更新を続ける前に、これらのプログラムを再"
+"起動するか停止するように手配すべきです。"
 
 #. Type: boolean
 #. Description
 #: ../debhelper.in/libc.templates:5001
 msgid "Restart services during package upgrades without asking?"
-msgstr ""
+msgstr "パッケージのアップグレード中、質問することなくサービスを再起動しますか?"
 
 #. Type: boolean
 #. Description
@@ -239,3 +239,9 @@ msgid ""
 "necessary restarts will be done for you automatically so you can avoid being "
 "asked questions on each library upgrade."
 msgstr ""
+"このシステムには、libpam や libc、libssl といった特定のライブラリがアップグレ"
+"ードされたときに再起動を必要とするサービスがインストールされています。この再起"
+"動はそのシステムで動作しているサービスの中断を伴う可能性があるため、通常は再起"
+"動させるサービス一覧をアップグレードの度に質問します。このオプションを選択する"
+"とその質問を避けられます。代わりに、再起動が必要な場合は全て自動で再起動させる"
+"ため、ライブラリをアップグレードする度に質問されるのを避けられます。"
