--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/kfreebsd/local-nscd-nosendfile-fix.diff: handle system without
     sendfile syscall
   * kfreebsd/local-sysdeps.diff: update to revision 4417 (from glibc-bsd).
+    Fixes sys/mount.h without C99.  Closes: #704598.
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
