debian/sysdeps/ia64.mk, debian/control: Switch ia64 back to gcc-4.6, as our world explodes when compiled with gcc-4.7 on ia64 right now.
svn path=/glibc-package/trunk/; revision=5569

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     this is no longer needed by the updated glibc-bsd sysdeps upstream.
   * debian/patches/any/cvs-regexp-overrun.diff: Backport patch from git
     to resolve regex matcher overrun, CVE-2013-0242 (Closes: #699399)
+  * debian/sysdeps/ia64.mk, debian/control: Switch ia64 back to gcc-4.6,
+    as our world explodes when compiled with gcc-4.7 on ia64 right now.
 
   [ Aurelien Jarno ]
   * patches/any/cvs-sys-param-h-DEV_BSIZE.diff: New patch to fix
