* kfreebsd/local-sysdeps.diff: update and related fixes
svn path=/glibc-package/trunk/; revision=5571

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,7 +28,9 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/kfreebsd/local-no-pldd.diff: pldd is linux only utility
   * patches/kfreebsd/local-nscd-nosendfile-fix.diff: handle system without
     sendfile syscall
-  * kfreebsd/local-sysdeps.diff: update to revision 4419 (from glibc-bsd).
+  * patches/kfreebsd/local-linuxthreads-stackguard.diff: handle elf subdir
+    removal
+  * kfreebsd/local-sysdeps.diff: update to revision 4422 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
