--- a/debian/changelog
+++ b/debian/changelog
@@ -30,7 +30,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     sendfile syscall
   * patches/kfreebsd/local-linuxthreads-stackguard.diff: handle elf subdir
     removal
-  * kfreebsd/local-sysdeps.diff: update to revision 4422 (from glibc-bsd).
+  * patches/kfreebsd/local-freopen.diff: support architecture without dup3()
+  * kfreebsd/local-sysdeps.diff: update to revision 4423 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
