--- a/debian/changelog
+++ b/debian/changelog
@@ -31,7 +31,9 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/kfreebsd/local-linuxthreads-stackguard.diff: handle elf subdir
     removal
   * patches/kfreebsd/local-freopen.diff: support architecture without dup3()
-  * kfreebsd/local-sysdeps.diff: update to revision 4426 (from glibc-bsd).
+  * patches/kfreebsd/local-linuxthreads-ctype_init.diff: follow upstream
+    changes in ctype initialization
+  * kfreebsd/local-sysdeps.diff: update to revision 4427 (from glibc-bsd).
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
