--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     closes: #695077.
   * patches/any/cvs-getaddrinfo-stack-overflow.diff: New patch to fix
     a stack overflow in getaddrinfo(), CVE-2013-1914. Closes: #704623.
+  * patches/any/local-missing-linux_types.h.diff: Drop, not need anymore.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
