--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/kfreebsd/local-freopen.diff: support architecture without dup3()
   * patches/kfreebsd/local-linuxthreads-ctype_init.diff: follow upstream
     changes in ctype initialization
+  * reenable lost any/local-linuxthreads-XPG7.diff
+                  any/local-linuxthreads-setclock.diff
   * kfreebsd/local-sysdeps.diff: update to revision 4427 (from glibc-bsd).
   * Add into testsuite-checking/expected-results-*-kfreebsd-gnu-*
     tst-timer5 test and new tst-backtrace[4-6] tests that are known to fail.
