drop obsolete any/local-linuxthreads-unwind.diff, any/local-linuxthreads-lowlevellock.diff
svn path=/glibc-package/trunk/; revision=5580

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,7 +36,9 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     changes in ctype initialization
   * reenable lost any/local-linuxthreads-XPG7.diff
                   any/local-linuxthreads-setclock.diff
-  * kfreebsd/local-sysdeps.diff: update to revision 4427 (from glibc-bsd).
+  * drop obsolete any/local-linuxthreads-unwind.diff
+                  any/local-linuxthreads-lowlevellock.diff
+  * kfreebsd/local-sysdeps.diff: update to revision 4428 (from glibc-bsd).
   * Add into testsuite-checking/expected-results-*-kfreebsd-gnu-*
     tst-timer5 test and new tst-backtrace[4-6] tests that are known to fail.
 
