* local/manpages/ld.so.8: drop --ignore-rpath documentation.  Closes:     #707802.
svn path=/glibc-package/trunk/; revision=5581

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/any/cvs-getaddrinfo-stack-overflow.diff: New patch to fix
     a stack overflow in getaddrinfo(), CVE-2013-1914. Closes: #704623.
   * patches/any/local-missing-linux_types.h.diff: Drop, not need anymore.
+  * local/manpages/ld.so.8: drop --ignore-rpath documentation.  Closes:
+    #707802.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
