* patches/all/local-ldd.diff: check if the dynamic linker works before     using it. Closes: #631242, #707091.
svn path=/glibc-package/trunk/; revision=5582

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/any/local-missing-linux_types.h.diff: Drop, not need anymore.
   * local/manpages/ld.so.8: drop --ignore-rpath documentation.  Closes:
     #707802.
+  * patches/all/local-ldd.diff: check if the dynamic linker works before
+    using it. Closes: #631242, #707091.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
