--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     #707802.
   * patches/all/local-ldd.diff: check if the dynamic linker works before
     using it. Closes: #631242, #707091.
+  * patches/kfreebsd/local-scripts.diff: remove dynamic linker name, now
+    handled by abi-variants.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
@@ -42,7 +44,7 @@ eglibc (2.17-2) UNRELEASED; urgency=low
                   any/local-linuxthreads-setclock.diff
   * drop obsolete any/local-linuxthreads-unwind.diff
                   any/local-linuxthreads-lowlevellock.diff
-  * kfreebsd/local-sysdeps.diff: update to revision 4428 (from glibc-bsd).
+  * kfreebsd/local-sysdeps.diff: update to revision 4431 (from glibc-bsd).
   * Add into testsuite-checking/expected-results-*-kfreebsd-gnu-*
     tst-timer5 test and new tst-backtrace[4-6] tests that are known to fail.
 
