--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,7 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * patches/kfreebsd/local-freopen.diff: support architecture without dup3()
   * patches/kfreebsd/local-linuxthreads-ctype_init.diff: follow upstream
     changes in ctype initialization
-  * reenable lost any/local-linuxthreads-XPG7.diff
+  * re-enable lost any/local-linuxthreads-XPG7.diff
                   any/local-linuxthreads-setclock.diff
   * drop obsolete any/local-linuxthreads-unwind.diff
                   any/local-linuxthreads-lowlevellock.diff
