* debian/control.in/main: remove ${misc:Depends} from libc Depends: field to     not get a dependency on debconf.  Closes: #707813.
svn path=/glibc-package/trunk/; revision=5586

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     using it. Closes: #631242, #707091.
   * patches/kfreebsd/local-scripts.diff: remove dynamic linker name, now
     handled by abi-variants.
+  * debian/control.in/main: remove ${misc:Depends} from libc Depends: field to
+    not get a dependency on debconf.  Closes: #707813.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
