--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
     handled by abi-variants.
   * debian/control.in/main: remove ${misc:Depends} from libc Depends: field to
     not get a dependency on debconf.  Closes: #707813.
+  * patches/localedata/submitted-locale-bo.diff: New patch to fix bo_IN and
+    bo_CN locales, causing localedef to fail and localechooser to FTBFS.
   
   [ Petr Salinger ]
   * patches/kfreebsd/local-linuxthreads-initfini.diff: follow upstream
