--- a/debian/changelog
+++ b/debian/changelog
@@ -51,6 +51,8 @@ eglibc (2.17-2) UNRELEASED; urgency=low
   * kfreebsd/local-sysdeps.diff: update to revision 4431 (from glibc-bsd).
   * Add into testsuite-checking/expected-results-*-kfreebsd-gnu-*
     tst-timer5 test and new tst-backtrace[4-6] tests that are known to fail.
+  * raise version dependency on g++-4.7 (>= 4.7.3-4) [kfreebsd-amd64] due to
+    multilib problems in earlier versions
 
  -- Adam Conrad <adconrad@0c3.net>  Tue, 07 May 2013 13:58:05 -0600
 
