--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 eglibc (2.17-3) UNRELEASED; urgency=low
 
-  * 
+  [ Petr Salinger ]
+  * Allow failure of tst-secure-getenv on kfreebsd-*,
+    as the /proc/self/exe is provided only on best effort basis here
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
 
