Clear up kfreebsd testsuite changelog entry
svn path=/glibc-package/trunk/; revision=5593

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 eglibc (2.17-3) UNRELEASED; urgency=low
 
   [ Petr Salinger ]
-  * Allow failure of tst-secure-getenv on kfreebsd-*,
-    as the /proc/self/exe is provided only on best effort basis here
+  * Allow failure of tst-secure-getenv on kfreebsd-*, as the kernel
+    in squeeze provides /proc/self/exe only on a best effort basis.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
 
