* Add s390x symbols files.
svn path=/glibc-package/trunk/; revision=5594

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ eglibc (2.17-3) UNRELEASED; urgency=low
   * Allow failure of tst-secure-getenv on kfreebsd-*, as the kernel
     in squeeze provides /proc/self/exe only on a best effort basis.
 
+  [ Aurelien Jarno ]
+  * Add s390x symbols files.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
 
 eglibc (2.17-2) unstable; urgency=low
