kfreebsd/local-sysdeps.diff: update to revision 4438 (from glibc-bsd).
svn path=/glibc-package/trunk/; revision=5597

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ eglibc (2.17-3) UNRELEASED; urgency=low
   [ Petr Salinger ]
   * Allow failure of tst-secure-getenv on kfreebsd-*, as the kernel
     in squeeze provides /proc/self/exe only on a best effort basis.
+  * kfreebsd/local-sysdeps.diff: update to revision 4438 (from glibc-bsd).
 
   [ Aurelien Jarno ]
   * Add s390x symbols files.
