--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ eglibc (2.17-3) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Add s390x symbols files.
 
+  [ Adam Conrad ]
+  * sysdeps/mips.mk: Install n64 and n32 stubs headers into each of
+    their respective libc-dev-* multilib packages (Closes: #708265)
+
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
 
 eglibc (2.17-2) unstable; urgency=low
