sysdeps/mipsel.mk: Do the same for mipsel multilib dev packages.
svn path=/glibc-package/trunk/; revision=5599

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ eglibc (2.17-3) UNRELEASED; urgency=low
   [ Adam Conrad ]
   * sysdeps/mips.mk: Install n64 and n32 stubs headers into each of
     their respective libc-dev-* multilib packages (Closes: #708265)
+  * sysdeps/mipsel.mk: Do the same for mipsel multilib dev packages.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
 
