--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-eglibc (2.17-3) UNRELEASED; urgency=low
+eglibc (2.17-3) unstable; urgency=medium
 
   [ Petr Salinger ]
   * Allow failure of tst-secure-getenv on kfreebsd-*, as the kernel
@@ -13,7 +13,7 @@ eglibc (2.17-3) UNRELEASED; urgency=low
     their respective libc-dev-* multilib packages (Closes: #708265)
   * sysdeps/mipsel.mk: Do the same for mipsel multilib dev packages.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 12 May 2013 20:22:06 +0200
+ -- Adam Conrad <adconrad@0c3.net>  Wed, 15 May 2013 18:50:01 -0600
 
 eglibc (2.17-2) unstable; urgency=low
 
