--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eglibc (2.17-4) UNRELEASED; urgency=low
+
+  * 
+
+ -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
+
 eglibc (2.17-3) unstable; urgency=medium
 
   [ Petr Salinger ]
