--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 eglibc (2.17-4) UNRELEASED; urgency=low
 
-  * 
+  * Drop versioned build-dependencies on tar, make, and sed, as they're
+    all {Build-,}Essential and available in oldstable (Closes: #708504)
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
