Add rpcinfo to libc-bin description.
svn path=/glibc-package/trunk/; revision=5604

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 eglibc (2.17-4) UNRELEASED; urgency=low
 
+  [ Adam Conrad ]
   * Drop versioned build-dependencies on tar, make, and sed, as they're
     all {Build-,}Essential and available in oldstable (Closes: #708504)
+
+  [ Clint Adams ]
+  * Add rpcinfo to libc-bin description.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
