--- a/debian/changelog
+++ b/debian/changelog
@@ -5,7 +5,10 @@ eglibc (2.17-4) UNRELEASED; urgency=low
     all {Build-,}Essential and available in oldstable (Closes: #708504)
 
   [ Petr Salinger ]
-  * kfreebsd/local-sysdeps.diff: update to revision 4485 (from glibc-bsd).
+  * kfreebsd/local-sysdeps.diff: update to revision 4511 (from glibc-bsd).
+    Closes: #635192. Closes: #667448.
+  * debian/sysdeps/kfreebsd.mk, debian/debhelper.in/libc.preinst:
+    bump minimal FreeBSD kernel version to 8.3.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
