--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ eglibc (2.17-4) UNRELEASED; urgency=low
   * debian/sysdeps/kfreebsd.mk, debian/debhelper.in/libc.preinst:
     bump minimal FreeBSD kernel version to 8.3.
 
+  [ Aurelien Jarno ]
+  * Remove any/local-o_cloexec.diff, kfreebsd/local-freopen.diff and
+    any/unsubmitted-cloexec-conditional.diff (not needed anymore).
+
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
 eglibc (2.17-3) unstable; urgency=medium
