--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ eglibc (2.17-4) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Remove any/local-o_cloexec.diff, kfreebsd/local-freopen.diff and
     any/unsubmitted-cloexec-conditional.diff (not needed anymore).
+  * debhelper.in/libc-bin.postinst: remove duplicate trigger message.
+    Closes: #707919.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
