* Update Hungarian debconf translation, by Nagy Elemér Károly.
svn path=/glibc-package/trunk/; revision=5613

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ eglibc (2.17-4) UNRELEASED; urgency=low
     any/unsubmitted-cloexec-conditional.diff (not needed anymore).
   * debhelper.in/libc-bin.postinst: remove duplicate trigger message.
     Closes: #707919.
+  * Update Hungarian debconf translation, by Nagy Elemér Károly. 
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
