* Add powerpcspe/unsubmitted-nearbyint.diff to fix FTBFS on powerpcspe     (Closes: #708741).   * Update testsuite-checking/expected-results-powerpc-linux-gnuspe-libc     (Closes: #693895).
svn path=/glibc-package/trunk/; revision=5614

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,10 @@ eglibc (2.17-4) UNRELEASED; urgency=low
   * debhelper.in/libc-bin.postinst: remove duplicate trigger message.
     Closes: #707919.
   * Update Hungarian debconf translation, by Nagy Elemér Károly. 
+  * Add powerpcspe/unsubmitted-nearbyint.diff to fix FTBFS on powerpcspe
+    (Closes: #708741).
+  * Update testsuite-checking/expected-results-powerpc-linux-gnuspe-libc
+    (Closes: #693895).
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
