* rules.d/build.mk: use rdfind + symlinks instead of fdupes + handcoded     shell script to optimize disk space.
svn path=/glibc-package/trunk/; revision=5615

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ eglibc (2.17-4) UNRELEASED; urgency=low
     (Closes: #708741).
   * Update testsuite-checking/expected-results-powerpc-linux-gnuspe-libc
     (Closes: #693895).
+  * rules.d/build.mk: use rdfind + symlinks instead of fdupes + handcoded
+    shell script to optimize disk space.
 
  -- Adam Conrad <adconrad@0c3.net>  Thu, 16 May 2013 16:09:55 -0600
 
